--- a/main.css
+++ b/main.css
@@ -16,8 +16,9 @@ body {
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar{
-  display: none;
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 body {
