--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
   src: url("fonts/sitka-small-599.ttf") format("ttf");
 }
 
+* {
+  font-family: Sitka;
+}
 html,
 body {
   width: 100%;
@@ -66,9 +69,8 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 20px;
-  position: relative;
   top: 0;
+  padding: 0 20px 20px 20px;
 }
 
 .top-image-wrapper {
@@ -101,18 +103,22 @@ nav {
 .main-content {
   margin: 0 auto;
   overflow-y: auto;
-  padding: 120px;
+  padding: 120px 120px 170px 120px;
   overflow-y: scroll;
-  height: 100%;
+  height: calc(100% + 20px);
 }
+@media only screen and (min-width: 1024px) {
+  .article-text > p {
+    margin-bottom: 40px;
+  }
+
+}
+
 
 @media only screen and (max-width: 1024px) {
   .main-content {
     padding: 40px;
-    padding-bottom: 120px;
   }
-
-
 }
 
 @media only screen and (max-width: 768px) {
@@ -159,6 +165,8 @@ nav {
     font-size: 14px;
   }
 }
+
+
 
 @media (orientation: landscape) {
   .scroll-text {
@@ -216,7 +224,7 @@ nav {
 
 @media only screen and (max-width: 1024px) {
   .contact-box {
-    padding: 10px;
+    padding: 30px;
   }
   .contact-box-text {
     font-size: 20px;
@@ -235,6 +243,8 @@ nav {
 .menu {
   display: flex;
   align-items: center;
+  margin-top: 30px;
+  z-index: 9999999999;
 }
 
 .menu-toggle {
@@ -273,7 +283,6 @@ nav {
   .menu-toggle {
     display: block;
     font-size: 1.5rem;
-    padding: 0.5rem;
     border: none;
     background: none;
     cursor: pointer;
@@ -286,10 +295,10 @@ nav {
     top: 0;
     left: 0;
     height: 100vh;
-    width: 70%;
+    width: 100%;
     background-color: #fff;
     padding: 2rem;
-    z-index: 1;
+    z-index: -1;
   }
 
   .menu-items li {
@@ -301,10 +310,30 @@ nav {
     display: flex;
     flex-direction: column;
     background-color: #3F3035;
+    align-items: center;
   }
 
   .menu-items li a:link,
   .menu-items li a:visited {
     color: aliceblue;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .menu-wrapper {
+    display: flex;
+    padding: 20px 0;
+  }
+  
+  .menu {
+    order: 1;
+    margin-top: 0;
+  }
+
+  .top-image-wrapper {
+    order: 0;
+    width: 65%;
+    justify-self: center;
+    padding-left: 70px;
   }
 }
