--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 99999999999999;
   background-image: url("images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -87,6 +87,7 @@ nav {
 
 @media only screen and (max-width: 768px) {
   .top-image {
+    flex-grow: .5;
     width: 45%;
   }
 }
@@ -96,7 +97,7 @@ nav {
     width: 35%;
   }
   .menu {
-    padding-bottom: 0;
+    padding-bottom: 0; 
   }
 }
 
@@ -244,7 +245,7 @@ nav {
   display: flex;
   align-items: center;
   margin-top: 30px;
-  z-index: 9999999999;
+  z-index: 9999999;
 }
 
 .menu-toggle {
