--- a/main.css
+++ b/main.css
@@ -232,8 +232,8 @@ nav {
   .contact-box {
     padding: 30px;
   }
-  .contact-box-text {
-    font-size: 20px;
+  .contact-box > p {
+    font-size: 16px;
   }
 }
 
