--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ nav {
 }
 
 .top-image {
-  width: 14%;
+  width: min(50vw, 200px);
   margin: 0 auto;
 }
 
@@ -93,7 +93,7 @@ nav {
 
 @media (max-width: 768px) and (orientation: portrait) {
   .top-image {
-    flex-grow: .5;
+    flex-grow: 0.5;
   }
 }
 
@@ -102,7 +102,7 @@ nav {
     width: 35%;
   }
   .menu {
-    padding-bottom: 0; 
+    padding-bottom: 0;
   }
 }
 
@@ -112,14 +112,38 @@ nav {
   padding: 120px 120px 170px 120px;
   overflow-y: scroll;
   height: calc(100% + 20px);
+  position: relative;
+  --scrollbar-width: 8px;
+  --mask-height: 32px;
+  overflow-y: auto;
+  padding-bottom: var(--mask-height);
+  padding-right: 20px;
+
+  /* The CSS mask */
+  --mask-image-content: linear-gradient(
+    to bottom,
+    transparent,
+    black var(--mask-height),
+    black calc(100% - var(--mask-height)),
+    transparent
+  );
+  --mask-size-content: calc(100% - var(--scrollbar-width)) 100%;
+  --mask-image-scrollbar: linear-gradient(black, black);
+  --mask-size-scrollbar: var(--scrollbar-width) 100%;
+  -webkit-mask-image: var(--mask-image-content), var(--mask-image-scrollbar);
+  -webkit-mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
+  mask-image: var(--mask-image-content), var(--mask-image-scrollbar);
+  mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
+  -webkit-mask-position: 0 0, 100% 0;
+  mask-position: 0 0, 100% 0;
+  -webkit-mask-repeat: no-repeat, no-repeat;
+  mask-repeat: no-repeat, no-repeat;
 }
 @media only screen and (min-width: 1024px) {
   .article-text > p {
     margin-bottom: 40px;
   }
-
 }
-
 
 @media only screen and (max-width: 1024px) {
   .main-content {
@@ -129,10 +153,9 @@ nav {
 
 @media only screen and (max-width: 768px) {
   .main-content {
-    padding: 20px;
+    padding: 30px;
     padding-bottom: 120px;
   }
-
 }
 
 .scroll-text-wrapper {
@@ -172,8 +195,6 @@ nav {
   }
 }
 
-
-
 @media (orientation: landscape) {
   .scroll-text {
     top: unset;
@@ -195,9 +216,9 @@ nav {
   .article-text {
     width: 70%;
   }
-.article-text p {
-  font-size: 16px;
-}
+  .article-text p {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -205,8 +226,6 @@ nav {
     font-size: 24px;
   }
 }
-
-
 
 .is-visible {
   opacity: 1;
@@ -227,7 +246,6 @@ nav {
   color: #ccc2b8;
   position: relative;
 }
-
 
 .contact-box-wrapper {
   height: 60%;
@@ -263,7 +281,7 @@ nav {
 .menu-items li a:link,
 .menu-items li a:visited {
   text-decoration: none;
-  color: #fff;
+  color: #ccc2b8;
   font-family: Sitka;
   font-size: 24px;
 }
@@ -276,7 +294,6 @@ nav {
   .menu-wrapper {
     margin-bottom: 10px;
   }
-
 
   .menu-toggle {
     display: block;
@@ -307,7 +324,7 @@ nav {
   .menu-items.show {
     display: flex;
     flex-direction: column;
-    background-color: #3F3035;
+    background-color: #3f3035;
     align-items: center;
   }
 
@@ -322,17 +339,18 @@ nav {
     display: flex;
     padding: 20px 0;
   }
-  
+
   .menu {
     order: 1;
     margin-top: 0;
+    align-items: flex-start;
   }
 
   .top-image-wrapper {
     order: 0;
     width: 65%;
     justify-self: center;
-    padding-left: 70px;
+    padding-left: 80px;
   }
 }
 
