--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ nav {
   margin: 0 auto;
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width:1024px) {
   .scroll-text {
     top: unset;
     bottom: 30%;
