--- a/main.css
+++ b/main.css
@@ -45,6 +45,11 @@ body {
   background-size: cover;
 }
 
+
+.contact-header {
+  font-size: 24px;
+}
+
 .loader {
   text-align: center;
   position: absolute;
@@ -143,9 +148,6 @@ nav {
   margin: 0 auto;
 }
 
-.contact-header {
-  font-size: 24px;
-}
 
 @media (orientation: landscape) and (max-width:1024px) {
   .scroll-text {
@@ -187,6 +189,10 @@ nav {
   font-size: 24px;
   color: #ccc2b8;
   position: relative;
+}
+
+.contact-box > p {
+  text-align: justify;
 }
 
 .contact-box-wrapper {
@@ -235,6 +241,10 @@ nav {
 
 @media only screen and (max-width: 1024px) {
   .contact-box > p {
+    font-size: 16px;
+  }
+
+  .contact-header {
     font-size: 16px;
   }
 
@@ -296,7 +306,7 @@ nav {
   }
 
   .menu-wrapper {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   .menu {
