--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ body {
 .loader {
   text-align: center;
   position: absolute;
-  width: 28%;
+  width: min(50vw, 200px);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -83,11 +83,13 @@ nav {
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .top-image {
   width: min(50vw, 200px);
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .main-content {
@@ -190,6 +192,7 @@ nav {
   color: #ccc2b8;
   position: relative;
 }
+
 
 .contact-box-wrapper {
   height: 60%;
