--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ body {
 .loader {
   text-align: center;
   position: absolute;
-  width: min(50vw, 200px);
+  width: 28%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -87,9 +87,10 @@ nav {
 }
 
 .top-image {
-  width: min(50vw, 200px);
   margin: 0 auto;
   cursor: pointer;
+  
+  max-width: 200px;
 }
 
 .main-content {
@@ -299,6 +300,17 @@ nav {
 }
 
 @media only screen and (max-width: 820px) {
+
+
+  .loader {
+    text-align: center;
+    position: absolute;
+    max-width: 200px;
+    top: 50%;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
   .main-content{
     padding: 50px;
     padding-bottom: 120px;
